--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <center style="color: #01c887; font-size: 60px;padding-bottom: 1%;">I Am Suspicious</center>
         </header>
         <nav>
-            <ul><a href="#">Home</a></ul>
+            <ul><a href="index.html">Home</a></ul>
             <ul><a href="https://github.com/suspiciousMans">My github</a></ul>
             <ul><a href="#">Contact</a></ul>
 
